--- a/public/assets/css/stylesheet.css
+++ b/public/assets/css/stylesheet.css
@@ -77,6 +77,14 @@ a.btn-icon-only span i {
     padding-right: 5px;
 }
 
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    margin: 0;
+}
+
 table tbody tr {
     background: none;
 }
