--- a/public/assets/css/ac.css
+++ b/public/assets/css/ac.css
@@ -150,7 +150,8 @@
     z-index: 1130;
     height: 100%;
     background: #006569;
-    border-radius: 0 25px 25px 0;
+    border-radius: 0 10px 10px 0;
+    padding-bottom: 40px;
 }
 
 .application .sidenav.show::before {
