--- a/public/assets/css/stylesheet.css
+++ b/public/assets/css/stylesheet.css
@@ -830,6 +830,18 @@ select:focus, input:focus {
     color: #fff;
 }
 
+.badge-activate {
+    background: #f76464;
+    color: #fff;
+}
+
+.badge-deactivate {
+    background: #3dffa5;
+    color: #fff;
+}
+
+
+
 .sal-right-card .Id {
     clear: both;
     float: left;
